[package]
name = "revault_tx"
version = "0.1.0"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"
repository = "https://github.com/revault/revault_tx"
license-file = "LICENCE"
keywords = ["revault", "bitcoin", "vault"]
description = "Bitcoin Script descriptors and transactions creation routines for Revault"
exclude = [".github/", "fuzz"]

[features]
use-serde = ["serde", "miniscript/use-serde"]

[dependencies]
bitcoinconsensus = "0.19.0-2"
miniscript = { version = "4.0.3", features = ["compiler"] }
base64 = { version = "0.13" }

serde = { version = "1.0", optional = true }

[dev-dependencies]
miniscript = { version = "4.0.3", features = ["compiler", "rand"] }
serde_json = "1.0"
