[package]
name = "revault_tx"
version = "0.5.0"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"
rust-version = "1.48"
repository = "https://github.com/revault/revault_tx"
license-file = "LICENCE"
keywords = ["revault", "bitcoin", "vault"]
description = "Bitcoin Script descriptors and transactions creation routines for Revault"
exclude = [".github/", "fuzz"]

[features]
use-serde = ["serde"]
fuzz = ["fastrand", "serde_json"]

[dependencies]
bitcoinconsensus = "0.19.0-2"
miniscript = { version = "6.0.0", features = ["compiler"] }
base64 = { version = "0.13" }

serde = { version = "1.0", optional = true }

# For the 'fuzz' feature to have access to the dev-dependencies too
fastrand = { version = "1.4.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
fastrand = "1.4.0"
serde_json = "1.0"
